Use *new* JVM parameter for Docker context